IDE said replacing a statement with something would work. It did not work on jar files